restore to previous working version

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,10 @@
-FROM cyberdojofoundation/ubuntu-build-essential:18.04
+FROM  cyberdojofoundation/ubuntu-build-essential:18.04
 LABEL maintainer=jon@jaggersoft.com
 
-RUN \
-apt-get update && \
-apt-get install --yes wget && \
-\
-mkdir /distribution && \
-cd /distribution && \
-wget http://www.cl.cam.ac.uk/~mr10/BCPL/bcpl.tgz && \
-tar xvf bcpl.tgz && \
-cd BCPL/cintcode && \
-. os/linux/setbcplenv && \
-make clean64 && \
-make sys64 && \
-rm /distribution/bcpl.tgz && \
-apt-get remove --yes wget
+ADD install.sh /
+
+RUN /install.sh && \
+    rm -f /install.sh
 
 RUN export BCPLROOT=/distribution/BCPL/cintcode \
  && export PATH=$PATH:$BCPLROOT/bin
