--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -3,3 +3,4 @@ LABEL maintainer=jon@jaggersoft.com
 
 COPY install.sh .
 RUN ./install.sh && rm -f ./install.sh
+COPY setbcplenv /distribution/BCPL/cintcode/os/linux
